test/parser.d/valid/unless2.souc
main() = do
	unless true do
		print "sub call"
	end unless
