test/parser.d/should_fail/until.souc
main() = do
	until true do
		print "sub call"
	end while
